--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,10 +5,10 @@
     android:padding="16dp" >
 
     <ImageView
+        android:contentDescription="@string/img_desc"
         android:id="@+id/img_photo"
         android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:scaleType="fitXY" />
+        android:layout_height="150dp" />
 
     <LinearLayout
         android:id="@+id/home"
@@ -30,7 +30,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
+            android:paddingStart="16dp"
             android:orientation="vertical">
 
             <TextView
@@ -59,7 +59,7 @@
         android:layout_below="@id/home"
         android:layout_marginStart="26dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/img_photo"
+        android:layout_toEndOf="@id/img_photo"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="@string/movie_desc" />
